--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -22,6 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.projectgoob.AddAlarmActivity"
+            android:label="@string/title_activity_add_alarm" >
+        </activity>
+        <service android:name="com.example.projectgoob.MyAlarmService" >
+        </service>
+        <activity
+            android:name="com.example.projectgoob.MathActivity"
+            android:label="@string/title_activity_math" >
+        </activity>
     </application>
 
 </manifest>
